--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,134 @@
+# ============================================
+# .gitignore - Git管理から除外するファイル
+# ============================================
+
+# ============================================
 # OS生成ファイル
+# ============================================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+desktop.ini
 
-# ビルドされたcss等
-*.css
-*.css.map
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
-
-# 例外設定
-# logs/*
-
-# 環境設定ファイル
+# ============================================
+# 環境設定ファイル（重要：絶対にGit管理しない）
+# ============================================
+# データベース接続情報を含む設定ファイル
+config.php
+config/*.php
+# 環境変数ファイル
 .env
+.env.local
+.env.*.local
 
-# 一時ファイルやキャッシュ
+# ============================================
+# ログファイル
+# ============================================
 *.log
+logs/
+*.log.*
+
+# ============================================
+# 一時ファイル・キャッシュ
+# ============================================
 *.tmp
 *.bak
 *.cache
+*.swp
+*.swo
+*~
+.cache/
 
-# データベースダンプ等
+# ============================================
+# ビルド成果物（コンパイル済みファイル）
+# ============================================
+# CSS（SCSSからコンパイルされたもの）
+*.css
+*.css.map
+# JavaScript（TypeScriptからコンパイルされたもの）
+*.js.map
+# Sass/SCSSキャッシュ
+.sass-cache/
+*.sass.map
+*.scss.map
+
+# ============================================
+# データベース関連
+# ============================================
+# データベースダンプ（本番データなど）
 *.sql
+*.dump
+# ただし、初期化用のSQLは管理する場合がある
+# その場合は以下のように例外設定
+# !init.sql
+# !schema.sql
 
-# リファレンス
-reference/
+# ============================================
+# ベンダーディレクトリ（Composer等）
+# ============================================
+vendor/
+node_modules/
+bower_components/
+
+# ============================================
+# IDE・エディタ設定
+# ============================================
+# PhpStorm
+.idea/
+*.iml
+# VSCode
+.vscode/
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+# Vim
+*.swp
+*.swo
+# Eclipse
+.project
+.classpath
+.settings/
+
+# ============================================
+# アップロードファイル（ユーザーがアップロードしたもの）
+# ============================================
+# uploads/
+# files/
+# images/user_upload/
+
+# ============================================
+# テスト関連
+# ============================================
+# PHPUnit
+phpunit.xml
+.phpunit.result.cache
+coverage/
+
+# ============================================
+# その他
+# ============================================
+# リファレンス・ドキュメント（プロジェクト固有）
+# reference/
+# docs/private/
+
+# バックアップファイル
+*.backup
+*.old
+
+# 圧縮ファイル
+*.zip
+*.tar
+*.tar.gz
+*.rar
+
+# ============================================
+# プロジェクト固有の除外設定
+# ============================================
+# 以下にプロジェクト固有の除外設定を追加
+# 例：
+# custom_directory/
+# specific_file.php
